--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,14 @@ buildNumber.properties
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+
+**/mvnw
+**/mvnw.cmd
+
+**/.mvn
+# 编译文件
+**/target/
+
+.idea
+
+**/.gitignore
